add userHandlers
